syntax = "proto3";

option go_package = "pb/";

service Auth {

  rpc Login (LoginRequest ) returns (LoginResponse);

}

message LoginRequest {
  string email = 1;
  string password = 2;

}

message LoginResponse {
  string access_token = 1;
}